# ComputerGraphics

./: .gitignore  README.md
Lab1/: CMakeLists.txt  main.cpp
Lab2/: CMakeLists.txt  constants.h  main.cpp  particle.cpp  particle.h  particlesystem.cpp  particlesystem.h  randdouble.cpp  randdouble.h  vec3d.cpp  vec3d.h
Lab3/: camera.h  hittable.h  hittable_list.h  main.cpp  material.h  random.h  ray.h  sphere.h  vec3.h
